--- a/caddy/ssrmu/user-config.json
+++ b/caddy/ssrmu/user-config.json
@@ -6,10 +6,10 @@
     "local_port": 1080,
 
     "password": "m",
-    "method": "aes-192-ctr",
-    "protocol": "auth_sha1_v4_compatible",
+    "method": "none",
+    "protocol": "auth_chain_a",
     "protocol_param": "",
-    "obfs": "tls1.2_ticket_auth_compatible",
+    "obfs": "tls1.2_ticket_auth",
     "obfs_param": "",
     "speed_limit_per_con": 0,
     "speed_limit_per_user": 0,
